<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FieldForce</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Field Force</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_leads_list">LeadsList</string>
    <string name="title_activity_assigned">Assigned</string>
    <string name="title_activity_unassigned">Unassigned</string>
    <string name="title_activity_collection">Collection</string>
    <string name="title_activity_collection_pager_adapter">CollectionPagerAdapter</string>
    <string name="title_activity_object_fragment">ObjectFragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_job_casting">JobCasting</string>
    <string name="title_activity_add_leads">AddLeads</string>
    <string name="title_activity_sign_in">Field Force</string>
    <string name="title_activity_login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="how_to_use">How it works?</string>

    <!-- SignUp -->
    <string name="name">name</string>
    <string name="email_id">email id</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="mobile_number">mobile number</string>
    <string name="location">location</string>
    <string name="already_member">Already a member?</string>

    <!--SignUp Error Messages-->
    <string name="name_error">name can not be empty</string>
    <string name="email_id_error">invalid email id</string>
    <string name="password_error">minimum 6 digit required</string>
    <string name="confirm_password_error">incorrect password</string>
    <string name="mobile_number_error">minimum 10 digit required</string>
    <string name="location_error">location can not be empty</string>

    <!-- SignIn -->
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="not_a_member">Not a member?</string>

    <!-- Add Customer -->
    <string name="add_customer_error_message">Enter All The Required Fields</string>
    <string name="add_customer_customer_name">Name</string>
    <string name="add_customer_company_name">Company</string>
    <string name="add_customer_customer_address">Address</string>
    <string name="add_customer_contact_number">Contact</string>
    <string name="add_customer_button_save">Save</string>

    <!-- Add Customer -->
    <string name="customer_name">customer name</string>
    <string name="customer_address">customer address</string>

    <!--Add Customer Error-->
    <string name="customer_name_error">customer name can not be empty</string>
    <string name="customer_address_error">customer address can not be empty</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <!--Add Leads-->
    <string name="company_name">company name</string>
    <string name="company_address">company address</string>
    <string name="contact_person">contact person name</string>
    <string name="contact_no">contact number</string>
    <string name="save">save</string>

    <!--Add Leads Error Messages-->
    <string name="company_name_error">company name can not be empty</string>
    <string name="company_address_error">company address can not be empty</string>
    <string name="contact_person_error">contact person name con not be empty</string>
    <string name="contact_no_error">minimum 10 digit</string>
    
    <!--Add Expenses-->
    <string name="expenses_type">expenses type</string>
    <string name="expenses_amount">expenses amount</string>

    <!--Add Expenses Error Messages-->
    <string name="expenses_type_error">expenses type can not be empty</string>
    <string name="expenses_amount_error">expenses amount can not be negative</string>

    <!-- Accounts Main -->
    <string name="accounts_main_expenses">Expenses</string>
    <string name="accounts_main_incentives">Incentives</string>
    <string name="accounts_main_new_text">New Text</string>
    <string name="accounts_main_total">Total</string>
    <string name="accounts_main_account_summary">Account Summary</string>

    <!-- Expenses -->
    <string name="activity_expense_type">Expense Type</string>
    <string name="activity_expense_amount">Expense Amount</string>
    <string name="title_activity_tab">Leads</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Closed</string>

</resources>
