<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#00AEEF"
    android:paddingBottom="10dp">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e_type"
        android:ems="12"
        android:textSize="15sp"
        android:hint="@string/activity_expense_type"
        android:background="@drawable/edittextstyle"
        android:layout_marginTop="72dp"
        android:layout_alignParentTop="true"
        android:drawableStart="@drawable/ic_write13"
        android:drawableLeft="@drawable/ic_write13"
        android:layout_alignLeft="@+id/e_amount"
        android:layout_alignStart="@+id/e_amount" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:background="@drawable/edittextstyle"
        android:ems="12"
        android:textSize="15sp"
        android:drawableStart="@drawable/ic_calculator40"
        android:drawableLeft="@drawable/ic_calculator40"
        android:hint="@string/activity_expense_amount"
        android:id="@+id/e_amount"
        android:layout_below="@+id/e_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />

    <Button
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:text="@string/add_customer_button_save"
        android:background="#FFFFFF"
        android:id="@+id/button"
        android:textColor="#000000"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/e_amount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />
</RelativeLayout>