<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/c_name"
        android:background="@drawable/edittextstyle"
        android:hint="@string/add_customer_customer_name"
        android:textColorHint="#595959"
        android:textColor="#595959"
        android:textSize="12sp"
        android:ems="17"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_user168_1"
        android:drawableLeft="@drawable/ic_user168_1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="17"
        android:textSize="12sp"
        android:background="@drawable/edittextstyle"
        android:textColorHint="#595959"
        android:textColor="#595959"
        android:id="@+id/c_address"
        android:hint="@string/add_customer_customer_address"
        android:layout_below="@+id/c_name"
        android:layout_alignLeft="@+id/c_name"
        android:layout_alignStart="@+id/c_name"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_pins9"
        android:drawableLeft="@drawable/ic_pins9"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/c_company"
        android:textColorHint="#595959"
        android:textColor="#595959"
        android:hint="@string/add_customer_company_name"
        android:textSize="12sp"
        android:background="@drawable/edittextstyle"
        android:ems="17"
        android:layout_below="@+id/c_address"
        android:layout_alignLeft="@+id/c_address"
        android:layout_alignStart="@+id/c_address"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_suitcase1"
        android:drawableLeft="@drawable/ic_suitcase1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textColorHint="#595959"
        android:ems="17"
        android:textColor="#595959"
        android:id="@+id/c_contact"
        android:textSize="12sp"
        android:background="@drawable/edittextstyle"
        android:hint="@string/add_customer_contact_number"
        android:layout_below="@+id/c_company"
        android:layout_alignLeft="@+id/c_company"
        android:layout_alignStart="@+id/c_company"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_smartphone11"
        android:drawableLeft="@drawable/ic_smartphone11"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter All The Required Fields"
        android:id="@+id/error"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

</RelativeLayout>