<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F7F7F7"
    android:scrollbars="none"
    tools:context="com.acc.fieldforce.SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/ColorPrimary"
            android:layout_alignParentTop="true"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            android:minHeight="?attr/actionBarSize"/>

        <TextView
            android:id="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@drawable/focus_color_text"
            android:textSize="22sp"
            android:fontFamily="Helvetica Neue"
            android:layout_marginTop="20dp"
            android:layout_below="@id/toolbar"
            android:layout_centerHorizontal="true"/>


        <EditText
            android:id="@+id/name"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_theme_edit_text_holo_light"
            android:gravity="center"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:nextFocusDown="@+id/email"
            android:paddingBottom="0dp"
            android:singleLine="true"
            android:textColorHint="#808080"
            android:textColor="@color/text_color">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/name_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:contentDescription="@null"
            android:textColor="@color/text_error_color"
            android:text="name can not be empty"
            android:visibility="gone"
            android:layout_below="@id/name"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_below="@+id/name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_theme_edit_text_holo_light"
            android:gravity="center"
            android:hint="@string/email_id"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/password"
            android:paddingBottom="0dp"
            android:singleLine="true"
            android:textColorHint="#808080"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/email_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:contentDescription="@null"
            android:textColor="@color/text_error_color"
            android:text="invalid email"
            android:visibility="gone"
            android:layout_below="@id/email"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_below="@+id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_theme_edit_text_holo_light"
            android:gravity="center"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/confirm_password"
            android:paddingBottom="0dp"
            android:singleLine="true"
            android:textColorHint="#808080"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/password_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:contentDescription="@null"
            android:textColor="@color/text_error_color"
            android:text="password minimum 6 digit"
            android:visibility="gone"
            android:layout_below="@id/password"/>

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_theme_edit_text_holo_light"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/mobile_number"
            android:paddingBottom="0dp"
            android:singleLine="true"
            android:textColorHint="#808080"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/confirm_password_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:contentDescription="@null"
            android:textColor="@color/text_error_color"
            android:text="incorrect password"
            android:visibility="gone"
            android:layout_below="@id/confirm_password"/>

        <EditText
            android:id="@+id/mobile_number"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_below="@+id/confirm_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_theme_edit_text_holo_light"
            android:gravity="center"
            android:hint="@string/mobile_number"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:nextFocusDown="@+id/location"
            android:paddingBottom="0dp"
            android:singleLine="true"
            android:maxLength="10"
            android:textColorHint="#808080"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/mobile_number_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:contentDescription="@null"
            android:textColor="@color/text_error_color"
            android:text="mobile number minimum 10 digit"
            android:visibility="gone"
            android:layout_below="@id/mobile_number"/>

        <EditText
            android:id="@+id/location"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_below="@+id/mobile_number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_theme_edit_text_holo_light"
            android:gravity="center"
            android:hint="@string/location"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:paddingBottom="0dp"
            android:singleLine="true"
            android:textColorHint="#808080"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/location_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:contentDescription="@null"
            android:textColor="@color/text_error_color"
            android:text="location can not be empty"
            android:visibility="gone"
            android:layout_below="@id/location"/>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_below="@+id/location"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="#F9851D"
            android:fontFamily="Helvetica Neue"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/already_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:text="@string/already_member"
            android:textColor="@drawable/focus_color_text"
            android:textSize="16sp" />
    </RelativeLayout>
</ScrollView>
